--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta property="og:video:type" content="application/x-shockwave-flash">
 <meta property="og:video:width" content="640">
 <meta property="og:type" content="video">
-<meta property="og:image" content="https://i.ibb.co/7gq8y0X/image-5.png">
+<meta property="og:image" content="https://i.ibb.co/bdRHg9d/gggdfd.jpg">
 <meta property="og:image:width" content="800" />
 <meta property="og:image:height" content="450" />
 <meta property="og:video" content="http://yt2fb.com/top-10-best-mouse-in-cambodia-2/"/>
